--- a/scss/modules/global/_footer.scss
+++ b/scss/modules/global/_footer.scss
@@ -25,7 +25,6 @@ footer {
     ul {
       display: flex;
       align-items: center;
-      gap: .8rem;
       li {
         a {
           border-radius: 100%;
@@ -35,6 +34,7 @@ footer {
           display: flex;
           align-items: center;
           justify-content: center;
+          margin-right: .8rem;
         }
       }
     }
