--- a/scss/style-config/_normalize.scss
+++ b/scss/style-config/_normalize.scss
@@ -394,6 +394,7 @@
       height: 1.5rem;
       border-radius: 100%;
       background: #999794;
+      font-size: 0;
 
     }
   }
